...
            "value": "वापस"
          }
        },
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Voltar"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "返回"
...
      }
    },
    "EyeChat": {
      "comment": "The name of the chat feature.",
      "isCommentAutoGenerated": true
    },
    "EyeSearch": {
      "comment": "O título da tela \"Home\".",
      "isCommentAutoGenerated": true
    },
    "Find my items with ${applicationName}": {
      "extractionState": "manual",
      "localizations": {
...
            "value": "स्टिकर"
          }
        },
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Adesivos"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "贴纸"
...
            "value": "टिप्स"
          }
        },
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Dicas"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "提示"
...
            "value": "ढूंढें"
          }
        },
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Procurar"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "搜索"
...
            "state": "translated",
            "value": "返回"
          }
        }
      }
    },
    "Lanterna desligada": {
      "comment": "A label describing when the flashlight is off.",
      "isCommentAutoGenerated": true
    },
    "Lanterna ligada": {
      "comment": "A label describing when the flashlight is on.",
      "isCommentAutoGenerated": true
    },
    "Open search in ${applicationName}": {
      "extractionState": "manual",
      "localizations": {
...
            "state": "translated",
            "value": "在 ${applicationName} 中打开搜索"
          }
        }
      }
    },
    "Quantidade:": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Quantity:"
...
            "value": "स्टिकर खोज रहे हैं..."
          }
        },
        "pt-BR": {
          "stringUnit": {
            "state": "needs_review",
            "value": "Procurando adesivo..."
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "正在搜索贴纸..."
...
            "value": "प्रिंट करें"
          }
        },
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Imprimir"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "打印"
...
