...
                                        .frame(width: stepperSizing.buttonSize, height: stepperSizing.buttonSize)
                                    Image(systemName: "minus")
                                        .font(.system(size: stepperSizing.iconSize, weight: .bold))
                                        .foregroundColor(.titleText)
                                }
                            }
                            .accessibilityIdentifier("StepperMinusButton")

                            Button {
                                quantity += 1
                            } label: {
                                ZStack {
                                    Circle()
...
                                        .frame(width: stepperSizing.buttonSize, height: stepperSizing.buttonSize)
                                    Image(systemName: "plus")
                                        .font(.system(size: stepperSizing.iconSize, weight: .bold))
                                        .foregroundColor(.titleText)
                                }
                            }
                            .accessibilityIdentifier("StepperPlusButton")
                        }
                    )
                    .offset(y: -22)
            }

        }
...
