...
                    VStack(alignment: .leading, spacing: 32) {
                        
                        Header(title: .localized(L10n.Sticker.Screen.title), description: .localized(L10n.Sticker.Screen.description), onAction: { coordinator.pop() })
                        
                        // Imagem com moldura branca
                        ZStack {
                            Image("adesivoPrinter")
                                .resizable()
                                .scaledToFit()
                                .frame(width: 215, height: 215)
                        }
                        .frame(maxWidth: .infinity)
                        
...
